@@ -1,8 +1,9 @@
 name = File (Field) Paths
 description = Adds improved Token based file sorting and renaming functionalities.
 package = Fields
-test_dependencies[] = token
 test_dependencies[] = pathauto
+test_dependencies[] = redirect
+test_dependencies[] = token
 test_dependencies[] = transliteration
 core = 7.x
 
@@ -21,4 +22,5 @@ files[] = modules/video.inc
 ; Simpletest files.
 files[] = tests/filefield_paths.test
 files[] = tests/pathauto.test
+files[] = tests/redirect.test
 files[] = tests/transliteration.test
