@@ -81,9 +81,14 @@ function filefield_paths_filefield_paths_process_file($type, $entity, $field, $i
         // Finalize file if necessary.
         if ($file !== $old_file) {
           $dirname = drupal_dirname($file['uri']);
-          if (file_prepare_directory($dirname, FILE_CREATE_DIRECTORY) && file_move((object) $old_file, $file['uri'])) {
+          if (file_prepare_directory($dirname, FILE_CREATE_DIRECTORY) && $new_file = file_move((object) $old_file, $file['uri'])) {
             // Process regular expression.
             _filefield_paths_replace_path($old_file['uri'], $file['uri'], $entity);
+
+            // Create redirect from old location.
+            if (module_exists('redirect') && !empty($settings['redirect']) && $settings['active_updating']) {
+              _filefield_paths_create_redirect($old_file['uri'], $new_file->uri);
+            }
 
             // Remove any old empty directories.
             $scheme = file_uri_scheme($old_file['uri']);
